fix: always align description list columns

--- a/components/DescriptionList/src/DescriptionListDetail.scss
+++ b/components/DescriptionList/src/DescriptionListDetail.scss
@@ -8,3 +8,23 @@
   padding-inline-end: var(--denhaag-description-list-padding-inline-end, var(--denhaag-description-list-padding));
   padding-inline-start: var(--denhaag-description-list-padding-inline-end, var(--denhaag-description-list-padding));
 }
+
+@media (width >= 768px) {
+  // By default: grid column 2 and 3
+  .denhaag-description-list__detail {
+    border-bottom: 1px solid var(--denhaag-description-list-border-color, lightgrey);
+    grid-column: 2 / 4;
+  }
+
+  // When action: grid column 2 for first detail, and column 3 for second detail
+  .denhaag-description-list__title:has(+ .denhaag-description-list__detail + .denhaag-description-list__detail)
+    + .denhaag-description-list__detail {
+    grid-column: 2;
+  }
+
+  .denhaag-description-list__title:has(+ .denhaag-description-list__detail + .denhaag-description-list__detail)
+    + .denhaag-description-list__detail
+    + .denhaag-description-list__detail {
+    grid-column: 3;
+  }
+}
